logs/takumi-cli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/gunicorn'...
Listing './lib/python3.5/site-packages/gunicorn/app'...
Listing './lib/python3.5/site-packages/gunicorn/http'...
Listing './lib/python3.5/site-packages/gunicorn/instrument'...
Listing './lib/python3.5/site-packages/gunicorn/workers'...
Listing './lib/python3.5/site-packages/gunicorn-19.7.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/schema-0.6.7.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/takumi'...
Listing './lib/python3.5/site-packages/takumi/hook'...
Listing './lib/python3.5/site-packages/takumi-0.1.4.dist-info'...
Listing './lib/python3.5/site-packages/takumi_cli'...
Listing './lib/python3.5/site-packages/takumi_cli/cmds'...
Listing './lib/python3.5/site-packages/takumi_cli/deploy'...
Listing './lib/python3.5/site-packages/takumi_cli/deploy/playbook'...
Listing './lib/python3.5/site-packages/takumi_cli/deploy/playbook/files'...
Listing './lib/python3.5/site-packages/takumi_cli-0.1.0.dist-info'...
Listing './lib/python3.5/site-packages/takumi_config'...
Listing './lib/python3.5/site-packages/takumi_config-0.1.3.dist-info'...
Listing './lib/python3.5/site-packages/takumi_ext'...
Listing './lib/python3.5/site-packages/takumi_ext-0.1.2.dist-info'...
Listing './lib/python3.5/site-packages/takumi_thrift'...
Listing './lib/python3.5/site-packages/takumi_thrift-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/thriftpy'...
Listing './lib/python3.5/site-packages/thriftpy/contrib'...
Listing './lib/python3.5/site-packages/thriftpy/contrib/tracking'...
Listing './lib/python3.5/site-packages/thriftpy/parser'...
Listing './lib/python3.5/site-packages/thriftpy/protocol'...
Listing './lib/python3.5/site-packages/thriftpy/transport'...
Listing './lib/python3.5/site-packages/thriftpy/transport/buffered'...
Listing './lib/python3.5/site-packages/thriftpy/transport/framed'...
Listing './lib/python3.5/site-packages/thriftpy/transport/memory'...
Listing './lib/python3.5/site-packages/thriftpy-0.3.9.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
